--- a/style/style.css
+++ b/style/style.css
@@ -20,8 +20,8 @@
 
 /* Убираем внешние отступы */
 body, header, footer, h1, h2, h3, h4, p, ul[class], ol[class], li, figure, figcaption, blockquote, dl, dd {
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 0%;
   }
   /*Убираем декорацию ссылок*/
   a {
